# ShapeDetector

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: main.cpp  pch.h
